src/snapshots/gpui_markup__codegen__tests__nested_elements.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[flex] { div { \"Inner\" }, } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().flex();
        let __child = {
            let __gpui_markup_element = div();
            let __child = "Inner";
            let __gpui_markup_element = gpui::ParentElement::child(
                __gpui_markup_element,
                __child,
            );
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
