src/snapshots/gpui_markup__codegen__tests__simple_div.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        __gpui_markup_element
    }
}
