src/snapshots/gpui_markup__codegen__tests__spread_children.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { ..items, } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __child = items;
        let __gpui_markup_element = gpui::ParentElement::children(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
