src/snapshots/gpui_markup__codegen__tests__spread_with_siblings.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { \"Header\", ..items, \"Footer\", } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __child = "Header";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        let __child = items;
        let __gpui_markup_element = gpui::ParentElement::children(
            __gpui_markup_element,
            __child,
        );
        let __child = "Footer";
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
