src/snapshots/gpui_markup__codegen__tests__svg.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { svg @[path: icon_path, size: px(24.0)] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = svg().path(icon_path).size(px(24.0));
        __gpui_markup_element
    }
}
